Marist classwork/compilerDesign/src/compilerDesign/hw3/grammar/Grammar3.java
/* Generated By:JavaCC: Do not edit this line. Grammar3.java */
package compilerDesign.hw3.grammar;

import java.io.FileReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.io.Reader;

@SuppressWarnings("all")
public class Grammar3 implements Grammar3Constants {
  /** A "buffer" for output from the compilation phase. */
  private static StringBuilder output = new StringBuilder();

  /** The newline character (or characters) based on platform. */
  public static String NEWLINE = System.getProperty("line.separator");

  /**
   * Empties the output buffer.
   */
  public static void resetOutput()
  {
    output.setLength(0);
  }

  /**
   * Gets a string containing all of the data in the output buffer.
   */
  public static String getOutput()
  {
    return output.toString();
  }

  /**
   * Appends the specified string to the end of the output buffer, followed by
   * a newline.
   * @param s the string to append
   */
  public static void appendln(String s)
  {
    output.append(s).append(NEWLINE);
  }

  /**
   * Appends the specified string to the end of the output buffer.
   * @param s the string to append
   */
  public static void append(String s)
  {
    output.append(s);
  }

  public static void main(String args[])
  throws ParseException, IOException
  {
    Reader stream = null;

    if (args.length == 0)
    {
      // use the console (standard input)
      stream = new InputStreamReader(System.in);
    }
    else if (args.length == 1)
    {
      // read from a file
      stream = new FileReader(args[1]);
    }
    else
    {
      // print usage notes
      System.out.println("Arguments:");
      System.out.println("[file] - optionally specify an input file");
      System.out.println("Standard input is used if no file is specified.");

      return;
    }

    Grammar3 parser = new Grammar3(stream);

    parser.Input();
  }

  static final public void Input() throws ParseException {
    Statement();
    jj_consume_token(0);
    appendln("Parse complete.");
  }

  static final public String Statement() throws ParseException {
  Token t;
  String s1, s2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Print:
      jj_consume_token(Print);
      jj_consume_token(LParen);
      s1 = Expression();
      jj_consume_token(RParen);
    s1 = "PrintStmt " + s1;

    appendln(s1);
    {if (true) return s1;}
      break;
    case CharLiteral:
      s1 = Id();
      jj_consume_token(Equals);
      s2 = Expression();
    s1 = "AsssignStmt " + s1 + " = " + s2;

    appendln(s1);
    {if (true) return s1;}
      break;
    case Int:
    case Char:
      s1 = VarDecl();
    s1 = "VarDeclStatement " + s1;

    appendln(s1);
    {if (true) return s1;}
      break;
    case LBrace:
      jj_consume_token(LBrace);
      s1 = StatementList();
      jj_consume_token(RBrace);
    s1 = "StmtList {" + s1 + "}";

    appendln(s1);
    {if (true) return s1;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String StatementList() throws ParseException {
  String s1 = null, s2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Int:
    case Char:
    case CharLiteral:
    case Print:
    case LBrace:
      s1 = Statement();
      s2 = StatementList();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    String ret = "";

    if(s1 != null)
      ret += "'" + s1 + "'";

    if(s2 != null)
      ret += "  '" + s2 + "'";

    appendln("In StmtList: " + ret);

    if(ret.length() == 0)
      {if (true) return null;}

    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public String Expression() throws ParseException {
  Token t;
  String s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Digit:
      s = IntExpression();
    appendln("IntExpr " + s);
    {if (true) return s;}
      break;
    case Quote:
      s = CharExpression();
    appendln("CharExpr " + s);
    {if (true) return s;}
      break;
    case CharLiteral:
      s = Id();
    appendln("Id (in expr() ): " + s);
    {if (true) return s;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String IntExpression() throws ParseException {
  Token t;
  String s;
    t = jj_consume_token(Digit);
    s = OpExpression();
    appendln("In IntExpr: " + t.image + " " + s);
    {if (true) return t.image + " " + s;}
    throw new Error("Missing return statement in function");
  }

  static final public String OpExpression() throws ParseException {
  Token t = null;
  String s = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Op:
      t = jj_consume_token(Op);
      s = Expression();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    if(t == null || s == null)
      {if (true) return "";}
    else
    {
      appendln("-OpExpr " + t.image + " " + s);
      {if (true) return t.image + " " + s;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public String CharExpression() throws ParseException {
  Token t;
  String s;
    jj_consume_token(Quote);
    s = CharList();
    jj_consume_token(Quote);
    s = "CharList \"" + s + "\"";

    appendln(s);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public String CharList() throws ParseException {
  Token t = null;
  String s = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CharLiteral:
      t = jj_consume_token(CharLiteral);
      s = CharList();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    String ret = "";

    if(t != null)
      ret += t.image + " ";

    if(s != null)
      ret += s;

        {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public String VarDecl() throws ParseException {
  String s1, s2;
    s1 = Type();
    s2 = Id();
    appendln("In VarDecl: " + s1 + " " + s2);
    {if (true) return s1 + " " + s2;}
    throw new Error("Missing return statement in function");
  }

  static final public String Id() throws ParseException {
  Token t;
    t = jj_consume_token(CharLiteral);
    appendln("Id: " + t.image);
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  static final public String Type() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Int:
      t = jj_consume_token(Int);
    appendln("Type " + t.image);
    {if (true) return t.image;}
      break;
    case Char:
      t = jj_consume_token(Char);
    appendln("Type " + t.image);
    {if (true) return t.image;}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  static public Grammar3TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  static public Token token, jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x24e0,0x24e0,0x8180,0x200,0x80,0x60,};
   }

  public Grammar3(java.io.InputStream stream) {
     this(stream, null);
  }
  public Grammar3(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new Grammar3TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public Grammar3(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new Grammar3TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public Grammar3(Grammar3TokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public void ReInit(Grammar3TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.Vector jj_expentries = new java.util.Vector();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  static public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[17];
    for (int i = 0; i < 17; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 6; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 17; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  static final public void enable_tracing() {
  }

  static final public void disable_tracing() {
  }

}
